# war-probs

./: README.md  main.py  pyproject.toml
scripts/: turn_count_distribution.py  turn_values_matrix_plot.py
src/war_probs/: cards.py  distributions.py  game.py  metrics.py
