[project]
name = "war-probs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.6.0",
    "marimo>=0.16.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "polars>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
